レスポンシブ調整

--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: OGP追加 -->
+    <meta name="description" content="自己紹介用のポートフォリオサイト">
+
+    <!-- OGP -->
+    <meta property="og:locale" content="ja_JP" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Ryunosuke's Portfolio" />
+    <meta property="og:description" content="自己紹介用のポートフォリオサイト" />
+    <meta property="og:url" content="https://portfolio.ryfiii.com/" />
+    <meta property="og:image" content="https://portfolio.ryfiii.com/ogp.png" />
+    <meta property="og:site_name" content="Ryunosuke's Portfolio" />
+
+    <!-- TwitterCard -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@aiueo1234xyz" />
+    <meta name="twitter:title" content="Ryunosuke's Portfolio" />
+    <meta name="twitter:description" content="自己紹介用のポートフォリオサイト" />
+    <meta name="twitter:image" content="https://portfolio.ryfiii.com/ogp.png" />
+
     <title>Ryunosuke's Portfolio</title>
 </head>
 
